--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
     "connect-redis": "^3.3.3",
     "cookie-parser": "~1.4.3",
     "debug": "~3.1.0",
-    "express": "~4.16.2",
+    "express": "^4.16.3",
     "express-session": "^1.15.6",
-    "mongoose": "^5.0.5",
-    "mysql2": "^1.5.2",
-    "pug": "~2.0.0-beta11",
+    "mongoose": "^5.1.0",
+    "mysql2": "^1.5.3",
+    "pug": "^2.0.3",
     "redis": "^2.8.0",
-    "sequelize": "^4.35.2"
+    "sequelize": "^4.37.7"
   },
   "devDependencies": {
-    "eslint": "^4.8.0",
-    "eslint-config-airbnb-base": "^12.0.1",
-    "eslint-plugin-import": "^2.7.0"
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.11.0"
   }
 }
